// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.getEnricherOrDieTryin with current user 1`] = `
Object {
  "logger": "test",
  "tags": Object {
    "customer": "123",
    "language": "en-US",
  },
  "user": Object {
    "access_level": "admin",
    "customer": "123",
    "username": "test-user",
  },
}
`;

exports[`.getEnricherOrDieTryin with tags 1`] = `
Object {
  "logger": "test",
  "tags": Object {
    "customer": "123",
    "language": "en-US",
    "tenant": "test",
  },
  "user": Object {
    "customer": "123",
  },
}
`;

exports[`.getEnricherOrDieTryin without current user 1`] = `
Object {
  "logger": "test",
  "tags": Object {
    "customer": undefined,
    "language": "en-US",
  },
  "user": Object {},
}
`;
